# mt-engine

./: .gitignore  Cargo.toml  Dockerfile.sbe  LICENSE  README.md  README_ZH.md  full_diff.patch  implementation_plan.md  test_snapshots.sh
.github/workflows/: release.yml  rust.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ZH.md  MEMORY_LIMITS.md  SBE_INTEGRATION_GUIDE.md  SBE_INTEGRATION_GUIDE_ZH.md  TRANSACTION_TYPES.md  TRANSACTION_TYPES_ZH.md
docs/superpowers/plans/: 2026-04-11-engine-decoupling-plan.md
docs/superpowers/specs/: 2026-04-11-engine-decoupling-design.md  2026-04-12-publish-crates-integration-design.md
mt-engine-core/: Cargo.toml  README.md  README_zh.md
mt-engine-core/benches/: matching_engine.rs
mt-engine-core/scratch/: check_sizes.rs
mt-engine-core/src/: lib.rs  tests.rs
mt-engine-core/src/book/backend/: bitset.rs  dense.rs  mod.rs  sparse.rs
mt-engine-core/src/codec/: mod.rs
mt-engine-core/src/command/: mod.rs
mt-engine-core/src/engine/: condition.rs  events.rs  mod.rs  sbe_listener.rs
mt-engine-core/src/orders/: mod.rs
mt-engine-core/src/outcome/: mod.rs
mt-engine-core/src/snapshot/: mod.rs  rkyv_util.rs
mt-engine-core/src/types/: mod.rs
mt-engine-sbe/: Cargo.toml  README.md
mt-engine-sbe/src/: control_message_codec.rs  control_op.rs  depth_update_codec.rs  execution_report_codec.rs  lib.rs  order_amend_codec.rs  order_cancel_codec.rs  order_flags.rs  order_status.rs  order_submit_codec.rs  order_submit_gtd_codec.rs  order_type.rs  public_trade_codec.rs  side.rs  time_in_force.rs  trade_codec.rs
schemas/mt-engine/: templates_FixBinary.xml
scripts/: generate-sbe.sh
