[package]
name = "mt-engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mt_engine = { path = "../mt-engine-sbe" }
slab = { version = "0.4", features = ["serde"] }
rustc-hash = "1.1"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.13"
libc = { version = "0.2", optional = true }

[features]
# 快照保存与导出功能 (由写入节点开启)
snapshot = ["libc"]
# 极致性能模式 (由读取/计算节点开启)
dense-node = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching_engine"
harness = false
