[package]
name = "mt-engine-core"
version = "0.1.0"
description = "High-performance matching engine core"
license = "Apache-2.0"
repository = "https://github.com/JiaoziExchange/mt-engine"
edition = "2021"

[dependencies]
mt_engine = { path = "../mt-engine-sbe", version = "0.1.0", features = ["rkyv"] }
slab = { version = "0.4", features = ["serde"] }
rustc-hash = "1.1"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
zstd = { version = "0.13", optional = true }
libc = { version = "0.2", optional = true }
tikv-jemallocator = { version = "0.5", optional = true }
rkyv = { version = "0.7", features = ["validation", "std"] }
memmap2 = "0.9"

[features]
# 基础持久化支持 (模型定义与编解码)
serde = ["dep:serde", "dep:bincode", "dep:zstd", "mt_engine/serde"]
# 快照保存与导出功能 (由写入节点开启，包含 fork 逻辑)
snapshot = ["serde", "dep:libc", "dep:tikv-jemallocator", "rkyv"]
# 极致性能模式 (由读取/计算节点开启)
dense-node = []
# Rkyv 高性能快照支持
rkyv = ["mt_engine/rkyv"]
# 开发观测模式 (由测试节点开启，零成本)
dev = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching_engine"
harness = false
