[package]
name = "mt_engine"
version = "0.1.1"
authors = ["sbetool"]
description = "MT-Engine Binary Protocol"
license = "Apache-2.0"
repository = "https://github.com/JiaoziExchange/mt-engine"
readme = "README.md"
edition = "2021"

[lib]
name = "mt_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7", features = ["validation", "std"], optional = true }

[features]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
